--- a/app/less/style.less
+++ b/app/less/style.less
@@ -34,6 +34,7 @@
 @import "lists.less";
 @import "panels.less";
 @import "projects.less";
+@import "social_board.less";
 @import "tabs.less";
 @import "forum.less";
 @import "base.less";
