--- a/app/less/various.less
+++ b/app/less/various.less
@@ -85,7 +85,7 @@
   background-image: linear-gradient(to bottom,rgba(0, 0, 0, 0) 50%,#FFF 50%);
   background-repeat: repeat-x;
   background-size: 2px 2px;
-  background-position: 0 25px;
+  background-position: 0 26px;
   text-decoration: none;
 }
 
@@ -177,6 +177,10 @@
 .tab-content {
   position: static !important;
   padding: 30px !important;
+}
+
+.tab-content>.active {
+  display: block;
 }
 
 // for alerts
