profile page looking good

--- a/app/less/various.less
+++ b/app/less/various.less
@@ -10,6 +10,12 @@
 
 // for user profile hero page
 
+.question-content {
+  font-size: 24px;
+  color: #3498db;
+  font-weight: bold;
+}
+
 .hero {
   background: #1b3e4f;
   background: -moz-linear-gradient(-45deg,#1b3e4f 0,#123b57 100%);
