--- a/app/components/users/user.dashboard.html
+++ b/app/components/users/user.dashboard.html
@@ -42,22 +42,22 @@
                 <br>
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="hpanel hnavyblue">
-                            <div class="panel-body">
+                        <div class="hpanel hblue">
+                            <div class="panel-heading hbuilt">
+
                                 <div class="media social-profile clearfix">
                                     <a class="pull-left">
-                                        <img ng-src="{{profile.user.profile.linkedin.pictureUrl || profile.user.profile.avatar || 'images/blank_avatar.png'}}" alt="profile-picture">
+                                        <img class="img-circle m-b" styel="height: 75px;" ng-src="{{profile.user.profile.linkedin.pictureUrl || profile.user.profile.avatar || 'images/blank_avatar.png'}}" alt="profile-picture">
                                     </a>
                                     <div class="media-body">
-                                        <h5>Anna Smith</h5>
-                                        <small class="text-muted">21.03.2015</small>
+                                        <p><span style="font-weight:bold;">Anna Smith</span> asked:</p>
+                                        <div class="question-content">
+                                           What is your favorite color?
+                                        </div>
                                     </div>
                                 </div>
-
-                                <div class="social-content m-t-md">
-                                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
-                                </div>
                             </div>
+                            <div class="panel-body" style="padding:0 20px;"></div>
                             <div class="panel-footer">
                                 <div class="social-talk">
                                     <div class="media social-profile clearfix">
@@ -66,8 +66,8 @@
                                         </a>
 
                                         <div class="media-body">
-                                            <span class="font-bold">John Novak</span>
-                                            <small class="text-muted">21.03.2015</small>
+                                            <span style="font-weight:bold;">John Novak</span>
+                                            <small class="text-muted">Oct-21</small>
 
                                             <div class="social-content">
                                                 Injected humour, or randomised words which don't look even slightly believable.
@@ -82,8 +82,8 @@
                                         </a>
 
                                         <div class="media-body">
-                                            <span class="font-bold">Mark Smith</span>
-                                            <small class="text-muted">14.04.2015</small>
+                                            <span style="font-weight:bold;">Mark Smith</span>
+                                            <small class="text-muted">Oct-22</small>
                                             <div class="social-content">
                                                 Many desktop publishing packages and web page editors.
                                             </div>
@@ -91,7 +91,7 @@
                                     </div>
                                 </div>
                                 <div class="social-form">
-                                    <input class="form-control" placeholder="Your comment">
+                                    <input class="form-control input-lg" placeholder="Write a reply..">
                                 </div>
                             </div>
                         </div>
