added skills to profile image

--- a/app/components/users/user.dashboard.html
+++ b/app/components/users/user.dashboard.html
@@ -14,6 +14,11 @@
                     words:1}}</span>, <span ng-bind-html="::profile.user.profile.linkedin.summary | sentence | linky:'_blank'"></span>
                 </h3>
                 <a href="#ask" class="btn btn-success btn-sm">Ask me a question</a>
+                <div style="padding-top:10px; overflow: hidden; height: 50px;">
+                    <li ng-repeat="skill in profile.user.profile.skills" style="margin-right: 5px;" class="btn btn-outline btn-default btn-xs" ui-sref="search.dashboard({location_path: nav.location.key, community: nav.location, query: skill})">
+                        {{::skill}}
+                    </li>
+                </div>
             </header>
         </div>
         <span><div id="cover-photo" class="active" ng-style="{'background-image':profile.background_image}"></div><span class="cover-overlay"></span></span>
@@ -31,7 +36,7 @@
 
 
         <!-- BEGIN Tab panes -->
-        <div class="tab-content">
+        <div class="profile-tab-content">
 
             <div role="tabpanel" class="tab-pane active" id="ask">
 
