--- a/app/less/various.less
+++ b/app/less/various.less
@@ -180,12 +180,12 @@
   border-top-color: #fff;
 }
 
-.tab-content {
+.profile-tab-content {
   position: static !important;
   padding: 30px !important;
 }
 
-.tab-content>.active {
+.profile-tab-content>.active {
   display: block;
 }
 
