--- a/app/components/users/user.dashboard.html
+++ b/app/components/users/user.dashboard.html
@@ -36,7 +36,7 @@
 
 
         <!-- BEGIN Tab panes -->
-        <div class="profile-tab-content">
+        <div class="tab-content" style="position: static; padding: 30px;">
 
             <div role="tabpanel" class="tab-pane active" id="ask">
 
