--- a/app/components/users/user.dashboard.html
+++ b/app/components/users/user.dashboard.html
@@ -55,7 +55,7 @@
                                         <img class="img-circle m-b" styel="height: 75px;" ng-src="{{profile.user.profile.linkedin.pictureUrl || profile.user.profile.avatar || 'images/blank_avatar.png'}}" alt="profile-picture">
                                     </a>
                                     <div class="media-body">
-                                        <p><span style="font-weight:bold;">Anna Smith</span> asked:</p>
+                                        <p><span style="font-weight:bold;">Anna Smith</span>, CEO of HelpDesk asked:</p>
                                         <div class="question-content">
                                            What is your favorite color?
                                         </div>
@@ -71,8 +71,8 @@
                                         </a>
 
                                         <div class="media-body">
-                                            <span style="font-weight:bold;">John Novak</span>
-                                            <small class="text-muted">Oct-21</small>
+                                            <span style="font-weight:bold;">John Novak</span>, CEO of Something Big
+                                            <small class="text-muted">- Oct 21</small>
 
                                             <div class="social-content">
                                                 Injected humour, or randomised words which don't look even slightly believable.
@@ -87,8 +87,8 @@
                                         </a>
 
                                         <div class="media-body">
-                                            <span style="font-weight:bold;">Mark Smith</span>
-                                            <small class="text-muted">Oct-22</small>
+                                            <span style="font-weight:bold;">Mark Smith</span>, Founder of Meyhem
+                                            <small class="text-muted">- Oct 22</small>
                                             <div class="social-content">
                                                 Many desktop publishing packages and web page editors.
                                             </div>
