--- a/app/components/users/user.dashboard.html
+++ b/app/components/users/user.dashboard.html
@@ -39,11 +39,14 @@
         <div class="tab-content" style="position: static; padding: 30px;">
 
             <div role="tabpanel" class="tab-pane active" id="ask">
-
-                <div class="input-group"><input type="text" class="form-control input-lg" placeholder="Write your question here.." ng-model="profile.question" style="margin-bottom: 5px;" required><span class="input-group-btn"> <button type="button" class="btn btn-success" style="height: 46px; margin-top: -5px;">Ask Question</button></span></div>
-                <div class="m-t-xs" ng-show="!profile.question && profile.submitted">
-                    <span class="text-danger">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> A question is required.</span>
-                </div>
+                <form role="form" ng-submit="profile.askQuestion()">
+                    <div class="input-group">
+                        <input type="text" class="form-control input-lg" placeholder="Write your question here.." ng-model="profile.question" style="margin-bottom: 5px;" required>
+                        <span class="input-group-btn">
+                            <input type="submit" value="Ask a Question" class="btn btn-success" style="height: 46px; margin-top: -5px;"/>
+                        </span>
+                    </div>
+                </form>
                 <br>
                 <div class="row">
                     <div class="col-lg-12">
