--- a/app/less/various.less
+++ b/app/less/various.less
@@ -32,19 +32,19 @@
 
 .hero .content {
   padding: 0 30px;
-  max-width: 89%;
+  //max-width: 89%;
   font-size: 34px;
   z-index: 10;
   position: relative;
 }
 
 .cover-overlay {
-  background: -moz-linear-gradient(-45deg,rgba(18,43,53,.7) 0,rgba(14,44,63,.7) 100%);
-  background: -webkit-gradient(linear,left top,right bottom,color-stop(0,rgba(18,43,53,.7)),color-stop(100%,rgba(14,44,63,.7)));
-  background: -webkit-linear-gradient(-45deg,rgba(18,43,53,.7) 0,rgba(14,44,63,.7) 100%);
-  background: -o-linear-gradient(-45deg,rgba(18,43,53,.7) 0,rgba(14,44,63,.7) 100%);
-  background: -ms-linear-gradient(-45deg,rgba(18,43,53,.7) 0,rgba(14,44,63,.7) 100%);
-  background: linear-gradient(135deg,rgba(18,43,53,.7) 0,rgba(14,44,63,.7) 100%);
+  background: -moz-linear-gradient(-45deg,rgba(18,43,53,.5) 0,rgba(14,44,63,.5) 100%);
+  background: -webkit-gradient(linear,left top,right bottom,color-stop(0,rgba(18,43,53,.5)),color-stop(100%,rgba(14,44,63,.5)));
+  background: -webkit-linear-gradient(-45deg,rgba(18,43,53,.5) 0,rgba(14,44,63,.5) 100%);
+  background: -o-linear-gradient(-45deg,rgba(18,43,53,.5) 0,rgba(14,44,63,.5) 100%);
+  background: -ms-linear-gradient(-45deg,rgba(18,43,53,.5) 0,rgba(14,44,63,.5) 100%);
+  background: linear-gradient(135deg,rgba(18,43,53,.5) 0,rgba(14,44,63,.5) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#b3122b35', endColorstr='#b30e2c3f', GradientType=1);
   -khtml-user-select: none;
   user-select: none;
