--- a/app/components/users/user.dashboard.ask.html
+++ b/app/components/users/user.dashboard.ask.html
@@ -8,6 +8,10 @@
 </form>
 <br>
 <div loading-bars ng-show="profile.working" style="text-align:center; margin-left: -50px; margin-top: 10px;"></div>
+<div ng-show="profile.communities.newmessages" class="row" ng-repeat="question in profile.communities.newmessages">
+    <div class="col-lg-12" ng-include="'components/users/user.dashboard.questions.html'">
+    </div>
+</div>
 <div class="row" ng-repeat="question in profile.communities.messages">
     <div class="col-lg-12" ng-include="'components/users/user.dashboard.questions.html'">
     </div>
