--- a/app/less/various.less
+++ b/app/less/various.less
@@ -16,6 +16,13 @@
   font-weight: bold;
 }
 
+.glowing-border {
+  outline: none;
+  border-color: #9ecaed;
+  box-shadow: 0 0 10px #9ecaed;
+  border-radius: 7px;
+}
+
 .hero {
   background: #1b3e4f;
   background: -moz-linear-gradient(-45deg,#1b3e4f 0,#123b57 100%);
