--- a/app/components/users/user.dashboard.ask.html
+++ b/app/components/users/user.dashboard.ask.html
@@ -1,8 +1,8 @@
 <form role="form" ng-submit="profile.askQuestion()">
-    <div class="input-group">
-        <input type="text" class="form-control input-lg" placeholder="Write your question here.." ng-model="profile.question" style="margin-bottom: 5px;" required>
+    <div id="questionbox" class="input-group">
+        <input type="text" class="form-control input-lg" placeholder="Write your question here.." ng-model="profile.question" required>
                         <span class="input-group-btn">
-                            <input type="submit" value="Ask a Question" class="btn btn-success" style="height: 46px; margin-top: -5px;"/>
+                            <input type="submit" value="Ask a Question" class="btn btn-success" style="height: 46px;"/>
                         </span>
     </div>
 </form>
