--- a/app/components/users/user.dashboard.ask.html
+++ b/app/components/users/user.dashboard.ask.html
@@ -7,7 +7,7 @@
     </div>
 </form>
 <br>
-<div loading-bars ng-show="profile.working" style="text-align:center; margin-left: -50px; margin-top: 10px;"></div>
+<div loading-bars ng-show="profile.working" style="text-align:center; margin-left: -50px; margin-bottom: 15px;"></div>
 <div ng-show="profile.communities.newmessages" class="row" ng-repeat="question in profile.communities.newmessages">
     <div class="col-lg-12" ng-include="'components/users/user.dashboard.questions.html'">
     </div>
