--- a/app/components/users/user.dashboard.questions.html
+++ b/app/components/users/user.dashboard.questions.html
@@ -2,11 +2,11 @@
     <div class="panel-heading hbuilt">
         <div class="media social-profile clearfix">
             <a class="pull-left">
-                <img class="img-circle m-b" style="height: 65px;" ng-src="{{question.from.avatar || 'images/blank_avatar.png'}}" alt="{{question.from.name}}" ui-sref="user.dashboard({location_path: question.from.key, community: {}})">
+                <img class="img-circle m-b" style="height: 65px;" ng-src="{{question.from.avatar || 'images/blank_avatar.png'}}" alt="{{question.from.name}}" ui-sref="user.dashboard({location_path: question.from.key, community: {}, profile: {}})">
             </a>
             <div class="media-body">
-                <a class="pull-right" style="font-size: 13px; margin-top: 3px; padding-right: 10px;" ui-sref="user.dashboard({location_path: question.from.key, community: {}})">{{question.from.headline}}</a>
-                <p><a style="font-weight:bold; padding-left: 4px;" ui-sref="user.dashboard({location_path: question.from.key, community: {}})">{{question.from.name}}</a> asked:</p>
+                <a class="pull-right" style="font-size: 13px; margin-top: 3px; padding-right: 10px;" ui-sref="user.dashboard({location_path: question.from.key, community: {}, profile: {}})">{{question.from.headline}}</a>
+                <p><a style="font-weight:bold; padding-left: 4px;" ui-sref="user.dashboard({location_path: question.from.key, community: {}, profile: {}})">{{question.from.name}}</a> asked:</p>
                 <div class="question-content">
                     {{ question.content }}
                 </div>
