--- a/app/less/various.less
+++ b/app/less/various.less
@@ -18,8 +18,8 @@
 
 .glowing-border {
   outline: none;
-  border-color: #9ecaed;
-  box-shadow: 0 0 10px #9ecaed;
+  border-color: #3c763d;
+  box-shadow: 0 0 10px #3c763d;
   border-radius: 7px;
 }
 
