--- a/app/components/users/user.dashboard.ask.html
+++ b/app/components/users/user.dashboard.ask.html
@@ -1,4 +1,4 @@
-<form role="form" ng-submit="profile.askQuestion()">
+<form ng-if="nav.user" role="form" ng-submit="profile.askQuestion()">
     <div id="questionbox" class="input-group">
         <input type="text" class="form-control input-lg" placeholder="Write your question here.." ng-model="profile.question" required>
                         <span class="input-group-btn">
@@ -6,13 +6,17 @@
                         </span>
     </div>
 </form>
+<span style="text-align: center;" ng-if="!nav.user">
+    <h1>Join the startup community in {{ (nav.location.profile.name | words : 0).slice(0,-1) }} to ask questions.</h1><br>
+    <h2><a href="mailto:james@startupcommunity.org?subject=I'd like an invitation to the {{nav.location.profile.name}} startup community, pronto." target="_blank">Click here to request an invitation.</a></h2>
+</span>
 <br>
 <div loading-bars ng-show="profile.working" style="text-align:center; margin-left: -50px; margin-bottom: 15px;"></div>
 <div ng-show="profile.communities.newmessages" class="row" ng-repeat="question in profile.communities.newmessages">
-    <div class="col-lg-12" ng-include="'components/users/user.dashboard.questions.html'">
+    <div class="col-lg-12" ng-include="'components/users/user.dashboard.ask.questions.html'">
     </div>
 </div>
 <div class="row" ng-repeat="question in profile.communities.messages">
-    <div class="col-lg-12" ng-include="'components/users/user.dashboard.questions.html'">
+    <div class="col-lg-12" ng-include="'components/users/user.dashboard.ask.questions.html'">
     </div>
 </div>
