--- a/app/components/common/welcome/welcome.profile.html
+++ b/app/components/common/welcome/welcome.profile.html
@@ -25,6 +25,7 @@
                 and your headline is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.headline">{{welcome.user.profile.headline || 'empty'}}</a>.
                 <br/><br/>
                 Click below to edit your summary:
+                <small>Note: Sum yourself up in the first sentence. It will be used on your profile.</small>
             </h4>
         </div>
         <div class="summary_form">
