--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -24,7 +24,7 @@
                 <ul class="nav navbar-nav no-borders">
                     <li ng-if="!nav.user" class="dropdown">
                         <div style="padding-top: 12px; margin-right: 8px;" ng-controller="LoginController as login">
-                            <a class="btn btn-success" tooltip-placement="left">
+                            <a class="btn btn-success" tooltip-placement="left" tooltip="Login">
                                 <div ng-click="login.authenticate('linkedin')" style="font-size: 16px; color: #fff;">Log In&nbsp;</div>
                             </a>
                         </div>
