--- a/app/components/companies/company.add.html
+++ b/app/components/companies/company.add.html
@@ -39,6 +39,15 @@
                             <span class="text-danger">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> A parent is required.</span>
                         </div>
                         <br>
+                        <br>
+                        And a revenue stage:
+                        <select class="form-control m-b" ng-model="welcome.selectedCompany.stage" style="margin-bottom: 5px;" required>
+                            <option ng-repeat="stage in welcome.stages">{{ stage }}</option>
+                        </select>
+                        <div class="m-t-xs" ng-show="!welcome.selectedCompany.stage && welcome.submitted">
+                            <span class="text-danger">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> A stage is required.</span>
+                        </div>
+                        <br>
                         Add up to six specific industries <a href="{{welcome.selectedCompany.angellist_url}}" target="_blank" title="{{welcome.selectedCompany.name}}'s AngelList Profile">{{welcome.selectedCompany.name}}</a> is a part of:
                         <div class="panel-body industry_select" style="padding:1px; margin-top: 6px; margin-bottom: 6px;">
                             <ui-select multiple ng-model="welcome.selectedCompany.industries" tagging="true" tagging-label="(new)" ng-disabled="disabled" limit="6" alert_title="Sorry, only 6 items here." alert_text="Focus on industries with a network in your community." alert_type="warning" style="border:none;">
