--- a/app/components/companies/company.list.html
+++ b/app/components/companies/company.list.html
@@ -5,7 +5,7 @@
             <div class="hpanel hgreen">
                 <div class="panel-footer top" style="font-size: 17px;">
                     <strong>Stage</strong> Filters
-                    <i ng-show="companies.loadingStage" class="fa fa-refresh fa-spin" style="padding: 4px; color: #aaa;"></i>
+                    <div loading-bars ng-show="users.loadingStage" style="display: inline;"></div>
                     <small class="pull-right text-muted" style="padding:7px 2px 0 0; font-size: 12px;">(Revenue)</small>
                 </div>
                 <div class="panel-body filternav">
@@ -50,7 +50,7 @@
             <div class="hpanel hnavyblue" ng-if="companies.community.type !== 'cluster'">
                 <div class="panel-footer top" style="font-size: 17px;">
                     <strong>Cluster</strong> Filters
-                    <i ng-show="companies.loadingCluster" class="fa fa-refresh fa-spin pull-right" style="padding: 4px; color: #aaa;"></i>
+                    <div loading-bars ng-show="companies.loadingCluster" style="display: inline;"></div>
                 </div>
                 <div class="panel-body filternav">
                     <ul class="panel-list">
@@ -68,7 +68,7 @@
             <div class="hpanel hblue">
                 <div class="panel-footer top" style="font-size: 17px;">
                     <strong>Network</strong> Filters
-                    <i ng-show="companies.loadingNetwork" class="fa fa-refresh fa-spin pull-right" style="padding: 4px; color: #aaa;"></i>
+                    <div loading-bars ng-show="companies.loadingNetwork" style="display: inline;"></div>
                 </div>
                 <div class="panel-body filternav">
                     <ul class="panel-list">
