--- a/app/components/users/user.list.html
+++ b/app/components/users/user.list.html
@@ -5,7 +5,7 @@
             <div class="hpanel hgreen">
                 <div class="panel-footer top" style="font-size: 17px;">
                     <strong>Role</strong> Filters
-                    <i ng-show="users.loadingRole" class="fa fa-refresh fa-spin pull-right" style="padding: 4px; color: #aaa;"></i>
+                    <div loading-bars ng-show="users.loadingRole" style="display: inline;"></div>
                 </div>
                 <div class="panel-body filternav">
 
@@ -16,22 +16,32 @@
                         <hr style="margin: 10px 0 10px 0;">
                         <li ng-class="{'active':users.selectedRole.indexOf('founder') >= 0}" ng-click="users.filterRole('founder')">
                             <a>
-                                <i class="fa fa-rocket text-navyblue"></i> Founders
+                                <i class="pe-7s-paper-plane text-primary"></i> Founders
                             </a>
                         </li>
                         <li ng-class="{'active':users.selectedRole.indexOf('leader') >= 0}" ng-click="users.filterRole('leader')">
                             <a>
-                                <i class="fa fa-flag text-danger"></i> Leaders
+                                <i class="text-danger pe-7s-flag"></i> Leaders
                             </a>
                         </li>
                         <li ng-class="{'active':users.selectedRole.indexOf('mentor') >= 0}" ng-click="users.filterRole('mentor')">
                             <a>
-                                <i class="fa fa-graduation-cap text-info"></i> Mentors
+                                <i class="text-info pe-7s-study"></i> Mentors
                             </a>
                         </li>
                         <li ng-class="{'active':users.selectedRole.indexOf('investor') >= 0}" ng-click="users.filterRole('investor')">
                             <a>
-                                <i class="fa fa-leaf text-success"></i> Investors
+                                <i class="text-success pe-7s-gleam"></i> Investors
+                            </a>
+                        </li>
+                        <li ng-class="{'active':users.selectedRole.indexOf('team') >= 0}" ng-click="users.filterRole('team')">
+                            <a>
+                                <i class="text-default pe-7s-ball"></i> Teams
+                            </a>
+                        </li>
+                        <li ng-class="{'active':users.selectedRole.indexOf('provider') >= 0}" ng-click="users.filterRole('provider')">
+                            <a>
+                                <i class="text-warning pe-7s-portfolio"></i> Providers
                             </a>
                         </li>
                     </ul>
@@ -41,7 +51,7 @@
             <div class="hpanel hnavyblue" ng-if="users.community.type !== 'cluster'">
                 <div class="panel-footer top" style="font-size: 17px;">
                     <strong>Cluster</strong> Filters
-                    <i ng-show="users.loadingCluster" class="fa fa-refresh fa-spin pull-right" style="padding: 4px; color: #aaa;"></i>
+                    <div loading-bars ng-show="users.loadingCluster" style="display: inline;"></div>
                 </div>
                 <div class="panel-body filternav">
                     <ul class="panel-list">
@@ -59,7 +69,7 @@
             <div class="hpanel hblue">
                 <div class="panel-footer top" style="font-size: 17px;">
                     <strong>Network</strong> Filters
-                    <i ng-show="users.loadingNetwork" class="fa fa-refresh fa-spin pull-right" style="padding: 4px; color: #aaa;"></i>
+                    <div loading-bars ng-show="users.loadingNetwork" style="display: inline;"></div>
                 </div>
                 <div class="panel-body filternav">
                     <ul class="panel-list">
